# ResearchMind-Autonomous-Multi-Agent-Research-Assistant

./: .env  README.md  hello.py  llm_set.py  pyproject.toml  vector_database.py
Agent Network/: AnalysisAgent.py  CoordinatorAgent.py  QualityAssuranceAgent.py  Readme.md  ResearchAgent.py  SynthesisAgent.py
HumaninLoop.py/: human_checkpoint.py  human_verification.py
Memory/: Stm.py  VectorDatabase.py
Tools/: LLM_Set.py
